--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "@11ty/eleventy-img": "^3.0.0",
     "esbuild": "^0.17.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "overrides": {
+    "sharp": "0.31.1"
   }
 }
