--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-img": "^3.0.0",
+    "@nodelib/fs.scandir": "^2.1.5",
     "esbuild": "^0.17.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
